# cycling_rides

./: clustering.py  download_gpx.py  hello.py  process_gpx.py  pyproject.toml  visualization.py
best_team/: ScoritoDownload.xlsx  Wielrennen.xlsx  scorito_team.py  tour_best_team.py
best_team/data_reader/: read_data.py  read_pcs.py
