[project]
name = "cycling-rides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.5"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "gpxpy>=1.6.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.22.0",
    "requests>=2.32.3",
    "ruff>=0.9.6",
    "scikit-learn>=1.6.1",
]
