[project]
name = "cycling-rides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.5"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "fastexcel>=0.14.0",
    "folium>=0.19.4",
    "gpxpy>=1.6.2",
    "networkx>=3.4.2",
    "openpyxl>=3.1.5",
    "overpy>=0.7",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "polars>=1.22.0",
    "procyclingstats>=0.2.3",
    "pulp>=3.1.1",
    "pyproj>=3.7.1",
    "pyvis>=0.3.2",
    "requests>=2.32.3",
    "ruff>=0.9.6",
    "scikit-learn>=1.6.1",
    "shapely>=2.0.7",
    "tqdm>=4.67.1",
    "unidecode>=1.4.0",
]
